# IOT

./: .gitignore  README.md
IOTV/src/IOTV_Client_QML/: CMakeLists.txt  Client.qml  DialogExit.qml  DialogShared.qml  Home.qml  Home_Connector.qml  IOTV_Client_QML  IOTV_Client_QML.pro  IOTV_Client_QML.pro.qtds  LineEdit.qml  MainMenu.qml  Makefile  Notification.qml  PopupWait.qml  client.cpp  client.h  colorimageprovider.cpp  colorimageprovider.h  device.cpp  device.h  generalaudiooutput.cpp  generalaudiooutput.h  main.cpp  main.qml  moc_client.cpp  moc_device.cpp  producer.cpp  producer.h  qml.qrc  qrc_qml.cpp  qtquickcontrols2.conf  wrap_qbytearray.cpp  wrap_qbytearray.h
IOTV/src/IOTV_Client_QML/!android/: AndroidManifest.xml
IOTV/src/IOTV_Client_QML/BaseItem/: ButtonShadow.qml  GridList.qml  Led_Indicator.qml
IOTV/src/IOTV_Client_QML/Client/: Client.qml
IOTV/src/IOTV_Client_QML/Devices/: BusyRect.qml  ChannelItem.qml  ChannelItemWrite.qml  DeviceHeader.qml  DeviceHeaderForm.ui.qml  Device_0.qml  Device_1.qml  Device_1_switch.qml  Device_2.qml  Device_4.qml  Device_Icon.qml
IOTV/src/IOTV_Client_QML/Devices/BaseItem/: AnimRoundButton.qml  DatePicker.qml  ItemShadow.qml  Led_state.qml  Log_Charts.qml  MeteoBlock.qml  MeteoBlock_Item.qml  MyLegend.qml
IOTV/src/IOTV_Client_QML/Devices/Device_1/: Device_1.qml  Device_1_switch.qml
IOTV/src/IOTV_Client_QML/Devices/Device_2/: Device_2.qml  Device_2_Item.qml  Log_Charts.qml
IOTV/src/IOTV_Client_QML/Devices/Device_4/: Device_4.qml  MyImg.qml
IOTV/src/IOTV_Client_QML/Devices/Device_5/: Device_5.qml  Log_Charts.qml
IOTV/src/IOTV_Client_QML/Devices/Device_8/: Device_8.qml  Image_cam.qml  MyCamRect.qml
IOTV/src/IOTV_Client_QML/Devices/Setting/: MainSetting.qml  Setting.qml
IOTV/src/IOTV_Client_QML/Devices/Setting/Device/: Device_1.qml  Device_4.qml  Device_5.qml  Device_8.qml  test.qml
IOTV/src/IOTV_Client_QML/Events/: 0ld_AddEvent.qml  ActionDataTX.qml  ActionDataTX_Ref.qml  ActionType.qml  AddEvent.qml  ChannelNumber.qml  DataString.qml  DataType.qml  EvActComponent.qml  EvActList.qml  EventType.qml  Events.qml  EventsAndActions.qml  HorizontLine.qml  HostNameComboBox.qml  StateType.qml
IOTV/src/IOTV_Client_QML/Events/ActionsGroup/: Action.qml  ActionGroupHeader.qml  ActionsGroup.qml  ActionsList.qml  AddGroup.qml
IOTV/src/IOTV_Client_QML/Events/BaseItem/: ActionDataTX.qml  ActionDataTX_Ref.qml  ActionType.qml  AlarmType.qml  ChannelNumber.qml  DataString.qml  DataType.qml  EventType.qml  HorizontLine.qml  HostNameComboBox.qml  ObjType.qml  OnOff.qml  StateType.qml  TimerType.qml
IOTV/src/IOTV_Client_QML/Events/EventsGroup/: AddCurrentConnection_ActionList.qml  AddCurrentConnection_GroupList.qml  AddGroup.qml  CurrentConnectionGroupList.qml  CurrentConnectionList.qml  Event.qml  EventGroupHeader.qml  EventsGroup.qml  EventsList.qml
IOTV/src/IOTV_Client_QML/Home/: DeviceComponent.qml  DeviceListView.qml  Home.qml  Home_Connector.qml
IOTV/src/IOTV_Client_QML/android/: AndroidManifest.xml  gradle.properties
IOTV/src/IOTV_Client_QML/android/res/drawable/: splashscreen.xml  splashscreen_land.xml  splashscreen_port.xml
IOTV/src/IOTV_Client_QML/img/: 4.xcf
IOTV/src/IOTV_Client_QML/lib/Base_Host/: channel.h
IOTV/src/IOTV_Client_QML/lib/Log/: log.h
IOTV/src/IOTV_Client_QML/lib/Protocols/: IOTV_SC.h  IOTV_SH.cpp
IOTV/src/IOTV_Client_QML/lib/raw/: raw.cpp
IOTV/src/IOTV_server/: !IOTV_server.pro  CMakeLists.txt  ConfigTypes.cpp  ConfigTypes.h  IOTV_server.pro  Makefile  README.md  config.h  config.h.in  main.cpp  moc_base_conn_type.cpp  moc_com_conn_type.cpp  moc_file_conn_type.cpp  moc_iotv_client.cpp  moc_iotv_host.cpp  moc_iotv_server.cpp  moc_predefs.h  moc_tcp_conn_type.cpp  moc_udp_conn_type.cpp  moc_wrapper.cpp  protocol_class.cpp  protocol_class.h  tst_server.cpp  wrapper.cpp  wrapper.h
IOTV/src/IOTV_server/.qt/: QtDeploySupport.cmake  deploy_iotv_server_4c92d15a08
IOTV/src/IOTV_server/Base_Host/: base_host.cpp  base_host.h  channel.cpp  channel.h  read_channel.cpp  write_channel.cpp  write_channel.h
IOTV/src/IOTV_server/Example/: IOTV_Event_Action.json  IOTV_Hosts.ini  IOTV_Server.ini
IOTV/src/IOTV_server/IOTV_Bot/: iotv_bot.cpp  iotv_bot.h
IOTV/src/IOTV_server/IOTV_Client/: iotv_client.cpp  iotv_client.h
IOTV/src/IOTV_server/IOTV_Host/: iotv_host.cpp  iotv_host.h
IOTV/src/IOTV_server/IOTV_Server/: config_server.cpp  config_server.h  eraser_iotv.cpp  eraser_iotv.h  iotv_server.cpp  iotv_server.h  maker_iotv.cpp  maker_iotv.h  tg_bot_handler.cpp  tg_bot_handler.h
IOTV/src/IOTV_server/IOT_Host/: IOT_Host.cpp  IOT_Host.h  iot_host_structsettings.h
IOTV/src/IOTV_server/IOT_Server/: iot_server.cpp  iot_server.h
IOTV/src/IOTV_server/Protocols/: IOTV_SH.cpp  IOTV_SH.h  iotv_sc.cpp  iotv_sc.h
IOTV/src/IOTV_server/channels/: channelmanager.h  write_channel.h
IOTV/src/IOTV_server/connection_type/: base_conn_type.cpp  base_conn_type.h  com_conn_type.cpp  com_conn_type.h  connection_type.cpp  ethernet_conn_type.cpp  ethernet_conn_type.h  file_conn_type.cpp  file_conn_type.h  tcp_conn_type.cpp  tcp_conn_type.h  tcp_reverse_conn_type.cpp  tcp_reverse_conn_type.h  udp_conn_type.cpp  udp_conn_type.h
IOTV/src/MK/FreerRTOS/Factory_IOTV/: .cproject  .project  CMakeLists.txt  global_def.h  global_extern.c  main.c  nvs.csv  partitions.csv  sdkconfig
IOTV/src/MK/FreerRTOS/Factory_IOTV/lib/: urldecode.c  urldecode.h
IOTV/src/MK/FreerRTOS/Factory_IOTV/main/: CMakeLists.txt  global_def.h  global_extern.c  main.c
IOTV/src/MK/FreerRTOS/Factory_IOTV/ota/: ota.c  ota.h
IOTV/src/MK/FreerRTOS/Factory_IOTV/web/: web.c  web.h
IOTV/src/MK/FreerRTOS/Factory_IOTV/wifi/: wifi.c
IOTV/src/MK/FreerRTOS/home_meteo_II/main/: CMakeLists.txt  Global_def.h  idf_component.yml  main.c
IOTV/src/MK/FreerRTOS/id_1/main/: CMakeLists.txt  Global_def.h  idf_component.yml  iotv.c  iotv.h  main.c
IOTV/src/MK/FreerRTOS/id_2/main/: CMakeLists.txt  Global_def.h  idf_component.yml  iotv.c  iotv.h  main.c
IOTV/src/MK/FreerRTOS/rgb_panel_dev/main/: CMakeLists.txt  Global_def.h  Global_extern.c  TFT_touch_screen.c  (+4 more)
(+1221 files in other folders)
