idf_component_register(SRCS "main.c"
						"Local_Lib/local_lib.c"
						"Local_Lib/system_info/system_info.c"
						"service/service.c"
						"service/wifi/wifi.c"
						"service/update/update.c"
						"service/factory_mode/factory_mode.c"
						"ota/ota.c"
						"nvs/local_nvs.c"
						"global/registers.c"
						"web/web.c"
						INCLUDE_DIRS "."
						EMBED_FILES "web/favicon.ico" 
									"web/html/index.html" 
									"web/html/connecting.html" 
									"web/html/ota.html"
									"web/html/ota_downloaded.html"
									"web/html/ota_downloading.html"
									"web/html/ota_fail.html"
									"web/html/error.html"
									"web/html/style.css")

