idf_component_register(SRCS "main.c"
						"Local_Lib/local_lib.c"
						"Local_Lib/system_info/system_info.c"
						"service/service.c"
						"service/wifi/wifi.c"
						"service/update/update.c"
						"service/factory_mode/factory_mode.c"
						"ota/ota.c"
						"nvs/local_nvs.c"
						"global/registers.c"
						"web/web.c"
						INCLUDE_DIRS "."
						EMBED_FILES "web/html/favicon.ico" 
									"web/html/index.html" 
									"web/html/net/net_1"
									"web/html/net/net_2"
									"web/html/net/net_3" 
									"web/html/net/net_4" 
									"web/html/msg/msg_1"
									"web/html/msg/msg_2"
									"web/html/msg/msg_3"
									"web/html/scanning.html"  
									"web/html/connecting.html" 
									"web/html/ota.html"
									"web/html/ota_downloaded.html"
									"web/html/ota_downloading.html"
									"web/html/ota_fail.html"
									"web/html/error.html"
									"web/html/style.css")

