idf_component_register(SRCS "main.c"
						"Local_Lib/local_lib.c"
						"Local_Lib/system_info/system_info.c"
						"service/service.c"
						"service/wifi/wifi.c"
						"service/update/update.c"
						"ota/ota.c"
						"nvs/local_nvs.c"
						"global/registers.c"
						"web/web.c"
						"web/ws/ws.c"
						"web/json/json.c"
						INCLUDE_DIRS "."
						EMBED_FILES "web/html/favicon.ico" 
									"web/html/index.html" 
									"web/html/net.html"
									"web/html/ota.html"
									"web/html/style.css"
									"web/html/js/js.js")

