idf_component_register(SRCS "main.c"
							"TFT_touchscreen/TFT_touch_screen.c"
							"status_panel/status_panel.c"
							"I2C/BME280.c"
							"I2C/i2c.c"
							"I2C/DS3231"
							"Local_Lib/local_lib.c"
							"Local_Lib/local_lvgl_lib.c"
							"sd/sd_spi.c"
							"screen_page/screendefault.c"
							"screen_page/homepage/homepage.c"
							"screen_page/homepage/datetime1/datetime1.c"
							"screen_page/homepage/datetime2/datetime2.c"
							"screen_page/homepage/meteo_chart/meteo_chart.c"
							"screen_page/menupage.c"
							"screen_page/full_screen_page/full_screen_page.c"
							"screen_page/setting/settingpage.c"
							"screen_page/setting/elements.c"
							"screen_page/setting/wifi.c"
							"screen_page/setting/date_time.c"
							"screen_page/setting/weather.c"
							"screen_page/setting/display.c"
							"screen_page/setting/update.c"
							"json/json_config.c"
							"service/service.c"
							"service/wifi/wifi.c"
							"service/sntp/sntp.c"
							"service/weather/weather.c"
							"service/display/display.c"
							"service/factory_reset/factory_reset.c"
							"fonts/ubuntu_mono_14.c"
							"fonts/ubuntu_mono_32.c"
							"fonts/ubuntu_mono_26.c"
							"fonts/ubuntu_mono_48.c"
							"fonts/ubuntu_mono_64.c"
							"fonts/ubuntu_mono_128.c"
							"fonts/ubuntu_mono_148.c"
							"img_c/sd.c"
							"ota/ota.c"
                       INCLUDE_DIRS ".")
