idf_component_register(SRCS "main.c"
						"iotv.c"
						"I2C/i2c.c"
						"Protocols/embedded/creatorpkgs.c"
						"Protocols/embedded/header.c"
						"Protocols/embedded/host_broadcast.c"
						"Protocols/embedded/identification.c"
						"Protocols/embedded/iotv_server_embedded.c"
						"Protocols/embedded/IOTV_SH.c"
						"Protocols/embedded/log_data.c"
						"Protocols/embedded/read_write.c"
						"Protocols/embedded/state.c"
						"Protocols/embedded/tech.c"
						"Local_Lib/local_lib.c"
						"Local_Lib/system_info/system_info.c"
						"service/service.c"
						"service/wifi/wifi.c"
						"service/tcp/tcp.c"
						"service/update/update.c"
						"service/relay/relay.c"
						"service/relay/buttons.c"
						"service/factory_mode/factory_mode.c"
						"ota/ota.c"
						"nvs/local_nvs.c"
						"global/registers.c"
                    INCLUDE_DIRS ".")
