idf_component_register(SRCS "main.c"
						"iotv.c"
						"Protocols/embedded/creatorpkgs.c"
						"Protocols/embedded/header.c"
						"Protocols/embedded/identification.c"
						"Protocols/embedded/iotv_server_embedded.c"
						"Protocols/embedded/IOTV_SH.c"
						"Protocols/embedded/read_write.c"
						"Protocols/embedded/state.c"
						"Protocols/embedded/tech.c"
						"Protocols/embedded/host_broadcast.c"
						"Protocols/embedded/log_data.c"
						"Local_Lib/local_lib.c"
						"service/service.c"
						"service/wifi/wifi.c"
						"service/udp_client/udp_client.c"
						"nvs/local_nvs.c"
						"deep_sleep/deep_sleep.c"
                    INCLUDE_DIRS ".")
