idf_component_register(SRCS "main.c"
							"TFT_touchscreen/TFT_touch_screen.c"
							"I2C/BME280.c"
							"I2C/i2c.c"
							"I2C/DS3231"
							"Global_extern.c"
							"Local_Lib/local_lib.c"
							"Local_Lib/cJSON.c"
							"sd/sd_spi.c"
							"status_panel/status_panel.c"
							"screen_page/screendefault.c"
							"screen_page/homepage.c"
							"screen_page/menupage.c"
							"screen_page/setting/settingpage.c"
							"screen_page/setting/elements.c"
							"screen_page/setting/wifi.c"
							"screen_page/setting/date_time.c"
							"screen_page/setting/weather.c"
							"json/json_config.c"
							"service/service.c"
							"service/wifi/wifi.c"
							"service/sntp/sntp.c"
							"service/weather/weather.c"
							"fonts/ubuntu_mono_14.c"
							"fonts/ubuntu_mono_32.c"
							"fonts/ubuntu_mono_26.c"
							"fonts/ubuntu_mono_48.c"
							"fonts/ubuntu_mono_64.c"
							"fonts/ubuntu_mono_128.c"
                       INCLUDE_DIRS ".")
