idf_component_register(SRCS "main.c"
						"iotv.c"
						"Global_extern.c"
						"Led_RGB.c"
						"Local_Lib/local_lib.c"
						"Protocols/embedded/creatorpkgs.c"
						"Protocols/embedded/header.c"
						"Protocols/embedded/identification.c"
						"Protocols/embedded/iotv_server_embedded.c"
						"Protocols/embedded/IOTV_SH.c"
						"Protocols/embedded/read_write.c"
						"Protocols/embedded/state.c"
						"Protocols/embedded/tech.c"
						"Net/Tcp.c"
						"Net/WIFI.c"
						"df_player.c"
						"button.c"
                    INCLUDE_DIRS ".")
