idf_component_register(SRCS "main.c"
						"Global_def.h"
						"Global_extern.c"
						"Led_RGB.h"
						"Led_RGB.c"
						"Protocols/embedded/creatorpkgs.c"
						"Protocols/embedded/header.c"
						"Protocols/embedded/identification.c"
						"Protocols/embedded/iotv_server_embedded.c"
						"Protocols/embedded/IOTV_SH.c"
						"Protocols/embedded/read_write.c"
						"Protocols/embedded/state.c"
						"Protocols/embedded/tech.c"
                    INCLUDE_DIRS ".")
