idf_component_register(SRCS "main.c"
						"iotv.c"
						"I2C/BME280.c"
						"I2C/VL6180X_Simple.c"
						"I2C/oled.c"
						"LedSignals.c"
						"I2C/i2c.c"
						"Net/Tcp.c"
						"Net/WIFI.c"
						"Global_extern.c"
						"Protocols/embedded/creatorpkgs.c"
						"Protocols/embedded/header.c"
						"Protocols/embedded/identification.c"
						"Protocols/embedded/iotv_server_embedded.c"
						"Protocols/embedded/IOTV_SH.c"
						"Protocols/embedded/read_write.c"
						"Protocols/embedded/state.c"
                    INCLUDE_DIRS ".")
