idf_component_register(SRCS "main.c"
						"iotv.c"
						"I2C/BME280.c"
						"I2C/VL6180X_Simple.c"
						"I2C/i2c.c"
						"I2C/DS3231.c"
						"Protocols/embedded/creatorpkgs.c"
						"Protocols/embedded/header.c"
						"Protocols/embedded/identification.c"
						"Protocols/embedded/iotv_server_embedded.c"
						"Protocols/embedded/IOTV_SH.c"
						"Protocols/embedded/read_write.c"
						"Protocols/embedded/state.c"
						"Protocols/embedded/tech.c"
						"Local_Lib/local_lib.c"
						"service/service.c"
						"service/wifi/wifi.c"
						"service/tcp/tcp.c"
						"service/update/update.c"
						"service/sntp/sntp.c"
						"service/bme280/bme280.c"
						"service/oled/oled.c"
						"ota/ota.c"
						"nvs/local_nvs.c"
						"fonts/ubuntu_mono_10.c"
						"fonts/ubuntu_mono_14.c"
						"fonts/ubuntu_mono_24.c"
                    INCLUDE_DIRS ".")
