idf_component_register(SRCS "main.c"
						"iotv.c"
						"camera/camera.c"
						"Protocols/embedded/creatorpkgs.c"
						"Protocols/embedded/header.c"
						"Protocols/embedded/identification.c"
						"Protocols/embedded/iotv_server_embedded.c"
						"Protocols/embedded/IOTV_SH.c"
						"Protocols/embedded/read_write.c"
						"Protocols/embedded/state.c"
						"Protocols/embedded/tech.c"
						"Local_Lib/local_lib.c"
						"json/json_config.c"
						"service/service.c"
						"service/wifi/wifi.c"
						"service/tcp/tcp.c"
						"service/update/update.c"
						"sd/sd_mmc.c"
						"ota/ota.c"
                    INCLUDE_DIRS ".")
